fix comment margins on mobile

--- a/src/css/comment.less
+++ b/src/css/comment.less
@@ -72,8 +72,8 @@
   }
 
   @media (max-width: @screen-xs-max) {
-    margin-left: -10px;
-    margin-right: -10px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -127,11 +127,7 @@
 
 }
 
-//downsize the comment margins on mobile
 @media (max-width: @screen-xs-max) {
-  .comments {
-    margin-left: 0;
-  }
 
   .comments .comment {
 
